/*
 * WARNING! All changes made in this file will be lost!
 * Created from 'scheme.tl' by 'mtprotoc'
 *
 *  Copyright (c) 2019-present,  NebulaChat Studio (https://nebula.chat).
 *  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mtproto;

option java_package = "chat.nebula.chatengine.mtproto";
option java_outer_classname = "MTProto";
option optimize_for = CODE_SIZE;
// option go_package = "github.com/nebula-chat/chatengine/mtproto";

import "schema.tl.crc32.proto";
import "schema.tl.core_types.proto";
import "schema.tl.transport.proto";
import "schema.tl.sync.proto";


///////////////////////////////////////////////////////////////////////////////
// SessionClientEvent <--
//  + TL_sessionClientCreated
//  + TL_sessionClientClosed
//
message SessionClientEvent_Data {
    int64 auth_key_id = 1;
    int64 client_conn_id = 2;
    int32 conn_type = 3;
}

message SessionClientEvent {
    TLConstructor constructor = 1;
    SessionClientEvent_Data data2 = 2;
}

// sessionClientCreated auth_key_id:long client_conn_id:long conn_type:int = SessionClientEvent;
message TL_sessionClientCreated {
    SessionClientEvent_Data data2 = 2;
}

// sessionClientClosed auth_key_id:long client_conn_id:long conn_type:int = SessionClientEvent;
message TL_sessionClientClosed {
    SessionClientEvent_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// String <--
//  + TL_string
//
message String_Data {
    string v = 1;
}

message String {
    TLConstructor constructor = 1;
    String_Data data2 = 2;
}

// string v:string = String;
message TL_string {
    String_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// ClientSession <--
//  + TL_clientSessionInfo
//
message ClientSession_Data {
    int64 auth_key_id = 1;
    string ip = 2;
    int32 layer = 3;
    int32 api_id = 4;
    string device_model = 5;
    string system_version = 6;
    string app_version = 7;
    string system_lang_code = 8;
    string lang_pack = 9;
    string lang_code = 10;
}

message ClientSession {
    TLConstructor constructor = 1;
    ClientSession_Data data2 = 2;
}

// clientSessionInfo auth_key_id:long ip:string layer:int api_id:int device_model:string system_version:string app_version:string system_lang_code:string lang_pack:string lang_code:string = ClientSession;
message TL_clientSessionInfo {
    ClientSession_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// ChatData <--
//  + TL_chatData
//
message ChatData_Data {
    Chat chat = 1;
    ChatParticipants participants = 2;
}

message ChatData {
    TLConstructor constructor = 1;
    ChatData_Data data2 = 2;
}

// chatData chat:Chat participants:ChatParticipants = ChatData;
message TL_chatData {
    ChatData_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// Int32 <--
//  + TL_int32
//
message Int32_Data {
    int32 v = 1;
}

message Int32 {
    TLConstructor constructor = 1;
    Int32_Data data2 = 2;
}

// int32 v:int = Int32;
message TL_int32 {
    Int32_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// Int64 <--
//  + TL_long
//
message Int64_Data {
    int64 v = 1;
}

message Int64 {
    TLConstructor constructor = 1;
    Int64_Data data2 = 2;
}

// long v:long = Int64;
message TL_long {
    Int64_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// AuthKeyInfo <--
//  + TL_authKeyInfo
//
message AuthKeyInfo_Data {
    int64 auth_key_id = 1;
    bytes auth_key = 2;
    FutureSalt future_salt = 3;
}

message AuthKeyInfo {
    TLConstructor constructor = 1;
    AuthKeyInfo_Data data2 = 2;
}

// authKeyInfo flags:# auth_key_id:long auth_key:bytes future_salt:flags.0?FutureSalt= AuthKeyInfo;
message TL_authKeyInfo {
    AuthKeyInfo_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// ServerConnected <--
//  + TL_push_sessionServerConnected
//
message ServerConnected_Data {
    int32 session_server_id = 1;
    string server_name = 2;
}

message ServerConnected {
    TLConstructor constructor = 1;
    ServerConnected_Data data2 = 2;
}

// push.sessionServerConnected session_server_id:int server_name:string = ServerConnected;
message TL_push_sessionServerConnected {
    ServerConnected_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// RSAPublicKey <--
//  + TL_rsa_public_key
//
message RSAPublicKey_Data {
    string n = 1;
    string e = 2;
}

message RSAPublicKey {
    TLConstructor constructor = 1;
    RSAPublicKey_Data data2 = 2;
}

// rsa_public_key n:string e:string = RSAPublicKey;
message TL_rsa_public_key {
    RSAPublicKey_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// HandshakeContext <--
//  + TL_handshakeContext
//
message HandshakeContext_Data {
    bytes nonce = 1;
    bytes server_nonce = 2;
    bytes new_nonce = 3;
    bytes a = 4;
    bytes p = 5;
    int64 auth_key_id = 6;
    bytes auth_key = 7;
}

message HandshakeContext {
    TLConstructor constructor = 1;
    HandshakeContext_Data data2 = 2;
}

// handshakeContext nonce:int128 server_nonce:int128 new_nonce:int256 a:bytes p:bytes auth_key_id:long auth_key:bytes = HandshakeContext;
message TL_handshakeContext {
    HandshakeContext_Data data2 = 2;
}


///////////////////////////////////////////////////////////////////////////////
// RawMessageData <--
//  + TL_handshakeData
//  + TL_sessionMessageData
//
message RawMessageData_Data {
    int32 state = 1;
    int32 res_state = 2;
    int64 client_conn_id = 3;
    HandshakeContext ctx = 4;
    int64 auth_key_id = 5;
    int32 quick_ack = 6;
    int32 conn_type = 7;
}

message RawMessageData {
    TLConstructor constructor = 1;
    RawMessageData_Data data2 = 2;
}

// handshakeData state:int res_state:int client_conn_id:long ctx:HandshakeContext = RawMessageData;
message TL_handshakeData {
    RawMessageData_Data data2 = 2;
}

// sessionMessageData auth_key_id:long quick_ack:int client_conn_id:long conn_type:int = RawMessageData;
message TL_sessionMessageData {
    RawMessageData_Data data2 = 2;
}




///////////////////////////////////////////////////////////////////////////////
// session.setClientSessionInfo session:ClientSession = Bool;
message TL_session_setClientSessionInfo {
    ClientSession session = 1;
}

///////////////////////////////////////////////////////////////////////////////
// session.getAuthorizations user_id:int exclude_auth_keyId:long = account.Authorizations;
message TL_session_getAuthorizations {
    int32 user_id = 1;
    int64 exclude_auth_keyId = 2;
}

///////////////////////////////////////////////////////////////////////////////
// session.resetAuthorization user_id:int hash:long = Int64;
message TL_session_resetAuthorization {
    int32 user_id = 1;
    int64 hash = 2;
}

///////////////////////////////////////////////////////////////////////////////
// session.getLayer auth_key_id:long = Int32;
message TL_session_getLayer {
    int64 auth_key_id = 1;
}

///////////////////////////////////////////////////////////////////////////////
// session.getLangCode auth_key_id:long = String;
message TL_session_getLangCode {
    int64 auth_key_id = 1;
}

///////////////////////////////////////////////////////////////////////////////
// session.getUserId auth_key_id:long = Int32;
message TL_session_getUserId {
    int64 auth_key_id = 1;
}

///////////////////////////////////////////////////////////////////////////////
// session.getPushSessionId user_id:int auth_key_id:long token_type:int = Int64;
message TL_session_getPushSessionId {
    int32 user_id = 1;
    int64 auth_key_id = 2;
    int32 token_type = 3;
}

///////////////////////////////////////////////////////////////////////////////
// session.getFutureSalts auth_key_id:long num:int = FutureSalts;
message TL_session_getFutureSalts {
    int64 auth_key_id = 1;
    int32 num = 2;
}

///////////////////////////////////////////////////////////////////////////////
// session.queryAuthKey auth_key_id:long = AuthKeyInfo;
message TL_session_queryAuthKey {
    int64 auth_key_id = 1;
}

///////////////////////////////////////////////////////////////////////////////
// session.setAuthKey auth_key:AuthKeyInfo = Bool;
message TL_session_setAuthKey {
    AuthKeyInfo auth_key = 1;
}

///////////////////////////////////////////////////////////////////////////////
// session.bindAuthKeyUser auth_key_id:long user_id:int = Bool;
message TL_session_bindAuthKeyUser {
    int64 auth_key_id = 1;
    int32 user_id = 2;
}

///////////////////////////////////////////////////////////////////////////////
// session.unbindAuthKeyUser auth_key_id:long user_id:int = Bool;
message TL_session_unbindAuthKeyUser {
    int64 auth_key_id = 1;
    int32 user_id = 2;
}

///////////////////////////////////////////////////////////////////////////////
// sync.syncUpdates flags:# user_id:int auth_key_id:long server_id:flags.0?int updates:Updates = Bool;
message TL_sync_syncUpdates {
    int32 user_id = 2;
    int64 auth_key_id = 3;
    int32 server_id = 4;
    Updates updates = 5;
}

///////////////////////////////////////////////////////////////////////////////
// sync.pushUpdates user_id:int updates:Updates = Bool;
message TL_sync_pushUpdates {
    int32 user_id = 1;
    Updates updates = 2;
}

///////////////////////////////////////////////////////////////////////////////
// sync.syncChannelUpdates flags:# channel_id:int user_id:int auth_key_id:long server_id:flags.0?int updates:Updates = Bool;
message TL_sync_syncChannelUpdates {
    int32 channel_id = 2;
    int32 user_id = 3;
    int64 auth_key_id = 4;
    int32 server_id = 5;
    Updates updates = 6;
}

///////////////////////////////////////////////////////////////////////////////
// sync.pushChannelUpdates channel_id:int user_id:int updates:Updates = Bool;
message TL_sync_pushChannelUpdates {
    int32 channel_id = 1;
    int32 user_id = 2;
    Updates updates = 3;
}

///////////////////////////////////////////////////////////////////////////////
// sync.pushRpcResult server_id:int auth_key_id:long req_msg_id:long result:bytes = Bool;
message TL_sync_pushRpcResult {
    int32 server_id = 1;
    int64 auth_key_id = 2;
    int64 req_msg_id = 3;
    bytes result = 4;
}

///////////////////////////////////////////////////////////////////////////////
// sync.getState auth_key_id:long user_id:int = updates.State;
message TL_sync_getState {
    int64 auth_key_id = 1;
    int32 user_id = 2;
}

///////////////////////////////////////////////////////////////////////////////
// sync.getDifference flags:# auth_key_id:long user_id:int pts:int pts_total_limit:flags.0?int date:int qts:int = updates.Difference;
message TL_sync_getDifference {
    int64 auth_key_id = 2;
    int32 user_id = 3;
    int32 pts = 4;
    int32 pts_total_limit = 5;
    int32 date = 6;
    int32 qts = 7;
}

///////////////////////////////////////////////////////////////////////////////
// sync.getChannelDifference flags:# auth_key_id:long user_id:int force:flags.0?true channel:InputChannel filter:ChannelMessagesFilter pts:int limit:int = updates.ChannelDifference;
message TL_sync_getChannelDifference {
    int64 auth_key_id = 2;
    int32 user_id = 3;
    bool force = 4;
    InputChannel channel = 5;
    ChannelMessagesFilter filter = 6;
    int32 pts = 7;
    int32 limit = 8;
}

///////////////////////////////////////////////////////////////////////////////
// push.connectToSessionServer sync_server_id:int = ServerConnected;
message TL_push_connectToSessionServer {
    int32 sync_server_id = 1;
}

///////////////////////////////////////////////////////////////////////////////
// push.pushUpdatesData auth_key_id:long pts:int pts_count:int = Bool;
message TL_push_pushUpdatesData {
    int64 auth_key_id = 1;
    int32 pts = 2;
    int32 pts_count = 3;
}

///////////////////////////////////////////////////////////////////////////////
// push.pushRpcResultData auth_key_id:long client_req_msg_id:long = Bool;
message TL_push_pushRpcResultData {
    int64 auth_key_id = 1;
    int64 client_req_msg_id = 2;
}

///////////////////////////////////////////////////////////////////////////////
// bot.executeCommand bot_id:int peer_type:int peer_id:int command_line:string = Message;
message TL_bot_executeCommand {
    int32 bot_id = 1;
    int32 peer_type = 2;
    int32 peer_id = 3;
    string command_line = 4;
}


///////////////////////////////////////////////////////////////////////////////
// Vector api result type


///////////////////////////////////////////////////////////////////////////////
// rpc

service RPCBot {
    // bot.executeCommand bot_id:int peer_type:int peer_id:int command_line:string = Message;
    rpc bot_executeCommand(TL_bot_executeCommand) returns (Message) {}
}

service RPCSession {
    // session.setClientSessionInfo session:ClientSession = Bool;
    rpc session_setClientSessionInfo(TL_session_setClientSessionInfo) returns (Bool) {}
    // session.getAuthorizations user_id:int exclude_auth_keyId:long = account.Authorizations;
    rpc session_getAuthorizations(TL_session_getAuthorizations) returns (account_Authorizations) {}
    // session.resetAuthorization user_id:int hash:long = Int64;
    rpc session_resetAuthorization(TL_session_resetAuthorization) returns (Int64) {}
    // session.getLayer auth_key_id:long = Int32;
    rpc session_getLayer(TL_session_getLayer) returns (Int32) {}
    // session.getLangCode auth_key_id:long = String;
    rpc session_getLangCode(TL_session_getLangCode) returns (String) {}
    // session.getUserId auth_key_id:long = Int32;
    rpc session_getUserId(TL_session_getUserId) returns (Int32) {}
    // session.getPushSessionId user_id:int auth_key_id:long token_type:int = Int64;
    rpc session_getPushSessionId(TL_session_getPushSessionId) returns (Int64) {}
    // session.getFutureSalts auth_key_id:long num:int = FutureSalts;
    rpc session_getFutureSalts(TL_session_getFutureSalts) returns (FutureSalts) {}
    // session.queryAuthKey auth_key_id:long = AuthKeyInfo;
    rpc session_queryAuthKey(TL_session_queryAuthKey) returns (AuthKeyInfo) {}
    // session.setAuthKey auth_key:AuthKeyInfo = Bool;
    rpc session_setAuthKey(TL_session_setAuthKey) returns (Bool) {}
    // session.bindAuthKeyUser auth_key_id:long user_id:int = Bool;
    rpc session_bindAuthKeyUser(TL_session_bindAuthKeyUser) returns (Bool) {}
    // session.unbindAuthKeyUser auth_key_id:long user_id:int = Bool;
    rpc session_unbindAuthKeyUser(TL_session_unbindAuthKeyUser) returns (Bool) {}
}

service RPCSync {
    // sync.syncUpdates flags:# user_id:int auth_key_id:long server_id:flags.0?int updates:Updates = Bool;
    rpc sync_syncUpdates(TL_sync_syncUpdates) returns (Bool) {}
    // sync.pushUpdates user_id:int updates:Updates = Bool;
    rpc sync_pushUpdates(TL_sync_pushUpdates) returns (Bool) {}
    // sync.syncChannelUpdates flags:# channel_id:int user_id:int auth_key_id:long server_id:flags.0?int updates:Updates = Bool;
    rpc sync_syncChannelUpdates(TL_sync_syncChannelUpdates) returns (Bool) {}
    // sync.pushChannelUpdates channel_id:int user_id:int updates:Updates = Bool;
    rpc sync_pushChannelUpdates(TL_sync_pushChannelUpdates) returns (Bool) {}
    // sync.pushRpcResult server_id:int auth_key_id:long req_msg_id:long result:bytes = Bool;
    rpc sync_pushRpcResult(TL_sync_pushRpcResult) returns (Bool) {}
    // sync.getState auth_key_id:long user_id:int = updates.State;
    rpc sync_getState(TL_sync_getState) returns (updates_State) {}
    // sync.getDifference flags:# auth_key_id:long user_id:int pts:int pts_total_limit:flags.0?int date:int qts:int = updates.Difference;
    rpc sync_getDifference(TL_sync_getDifference) returns (updates_Difference) {}
    // sync.getChannelDifference flags:# auth_key_id:long user_id:int force:flags.0?true channel:InputChannel filter:ChannelMessagesFilter pts:int limit:int = updates.ChannelDifference;
    rpc sync_getChannelDifference(TL_sync_getChannelDifference) returns (updates_ChannelDifference) {}
}

service RPCPush {
    // push.connectToSessionServer sync_server_id:int = ServerConnected;
    rpc push_connectToSessionServer(TL_push_connectToSessionServer) returns (ServerConnected) {}
    // push.pushUpdatesData auth_key_id:long pts:int pts_count:int = Bool;
    rpc push_pushUpdatesData(TL_push_pushUpdatesData) returns (Bool) {}
    // push.pushRpcResultData auth_key_id:long client_req_msg_id:long = Bool;
    rpc push_pushRpcResultData(TL_push_pushRpcResultData) returns (Bool) {}
}

